--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <header>
             <h1>Juan Camilo Varon</h1>
             <nav>
-                <a href="./index.html" Title="About" target="_blank">About</a>
-                <a href="./contact.html" Title="Contact Information" target="_blank">Contact</a>
-                <a href="./portfolio.html" Title="Portfolio Information" target="_blank">Portfolio</a>
+                <a class="leftLink" href="./index.html" Title="About" target="_blank">About</a>
+                <a class="centerLink" href="./contact.html" Title="Contact Information" target="_blank">Contact</a>
+                <a class="rightLink" href="./portfolio.html" Title="Portfolio Information" target="_blank">Portfolio</a>
 
             </nav>
         </header>
