contact is done

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="./assets/css/style.css" rel="stylesheet" type="text/css">
 
     <!--access a vast array of characters -->
-    <title>Basic_Portfolio</title>
+    <title>Bio</title>
 </head>
 
 <body>
