formatting finally done, just have to write an actual bio

--- a/contact.html
+++ b/contact.html
@@ -27,16 +27,16 @@
 
         <div class="Wrapper">
 
-
-            <form>
+            
+            <form action="">
 
                 <h2>Contact</h2>
                 <p class="contactHeaders">Name:</p>    
-                <input type="text" id="userName"><br>
+                <input type="text" value="" id="userName"><br>
                 <p class="contactHeaders">Email:</p> 
-                <input type="email" id="userEmail"><br>
+                <input type="email" value="" id="userEmail"><br>
                 <p class="contactHeaders">Message:</p> 
-                <input type="text" id="message"><br>
+                <input type="text" value="" id="message"><br>
                 <input id="submitButton" type="submit" value="Submit"> <br>
 
 
@@ -50,9 +50,9 @@
         </div>
     </div>
     <footer>
-        <h4>
+        <h5>
             Copyright @
-        </h4>
+        </h5>
 
     </footer>
 
