--- a/index.html
+++ b/index.html
@@ -32,17 +32,12 @@
 
                 <h2>About Me</h2>
                 <img id="profile" src="./assets/images/profile-pic.jpg">
-                <p class="other-Text" id="bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce molestie fermentum enim ut efficitur. Aliquam
-                vitae ipsum nec mi malesuada molestie eget at ligula. Sed tincidunt volutpat egestas. Cras quis elit vel
-                elit pharetra tincidunt. Sed facilisis dictum placerat. Curabitur fermentum urna a dui malesuada venenatis.
-                Praesent semper ex eget eleifend consectetur. Duis egestas, libero eget porttitor porta, risus nisi dignissim
-                est, vitae bibendum nulla nunc non neque. Duis ullamcorper quis urna sit amet accumsan. Duis sit amet lorem
-                rhoncus, rhoncus purus quis, sagittis tortor. Donec bibendum et augue et efficitur. Proin vitae turpis leo. sdjkfgbkjgndjkd
-                asdfsdf asdfasdf asdfaskdomdfg asdfsadf asdfkmsdf ksdmfsdfsd asdfsdjn sadfjnsadf oineg ergneoina aosindfin asindfknao 
-                jsdnkdnfsg ajldnflknsdf jnlsa jndfgli ainsdf la and</p>
+                <p class="other-Text" id="bio">I am an electrical engineering graduate from the University of Texas at Austin. I currently work along side a construction team in order to develop code compliant, cost 
+                    efficient electrical system installation designs for Walker Engineering. After two years in the trade, I have come to realize how dependent we are on web based appilactions
+                    in our day to day to activites. Interaction with these applications, along with the lucrative opportunities in today's market, has sparked my interests in the tech industry.
+                    That sparked interest has led me to this course and needless to say, I am excited to begin my journey into learning the in's and out's of full stack developing. </p>
 
-
-
+            
 
             </article>
 
